--- a/puma-page.css
+++ b/puma-page.css
@@ -1,1 +1,76 @@
 
+  .column {
+    float: left;
+    width: 50%;
+}  
+ 
+
+  .column-left
+  { 
+    position: absolute;
+    left: 30px;
+    top: 290px;
+  }
+  
+  
+  .column-right
+  { 
+    position: absolute;
+    left: 580px;
+    top: 375px;
+  }
+  
+  
+  .column-center
+  { 
+   position: absolute;
+    left: 320px;
+    top: 300px;
+  }
+  
+   .column-left1
+  { 
+    position: absolute;
+    left: 40px;
+    top: 760px;
+  }
+  
+  hr{
+  display: block;
+  border-style: solid;
+  border-width: 3px;
+  color:grey;
+  }
+  
+  .column-right1
+  { 
+    position: absolute;
+    left: 600px;
+    top: 805px;
+  }
+  
+  
+  .column-center1
+  { 
+   position: absolute;
+    left: 325px;
+    top: 800px;
+  }
+  
+  
+    h1{
+    font-size:45px;
+    font-family: "veranda", sans-serif;
+    background-color: black;
+    color:white;   
+    }
+    .cleats{
+    font-size:30px;
+  }
+  
+    body{
+    font-family: "veranda", sans-serif;
+    width:850px;
+    background-color: #E3E3E3;
+  }
+ 
