--- a/index.css
+++ b/index.css
@@ -1,4 +1,15 @@
 
+input {
+  width: 30%;
+  padding: 5px 20px;
+  margin: 4px 0;
+  box-sizing: border-;
+}
+
+
+
+
+
     .column {
     float: left;
     width: 50%;
