--- a/index.css
+++ b/index.css
@@ -13,6 +13,12 @@ input[type=submit] {
   box-sizing: border-;
 }
 
+input[type=text][name=comment] {
+  width: 80px;
+  padding: 20px 107px;
+  margin: px ;
+  box-sizing: border-;
+}
 
 
     .column {
